// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTable should display loading spinner when isLoaded is true 1`] = `
<div
  class="MuiPaper-root-0185 MuiPaper-elevation2-0189 MuiPaper-rounded-0186 UserTable-root-0181"
>
  <table
    class="MuiTable-root-0212 UserTable-table-0182"
  >
    <thead
      class="MuiTableHead-root-0213"
    >
      <tr
        class="MuiTableRow-root-0214 MuiTableRow-head-0217"
      >
        <th
          class="MuiTableCell-root-0222 WithStyles-TableCell--root-0219 MuiTableCell-head-0223 WithStyles-TableCell--head-0220"
          scope="col"
        />
        <th
          class="MuiTableCell-root-0222 WithStyles-TableCell--root-0219 MuiTableCell-head-0223 WithStyles-TableCell--head-0220"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0256 MuiButton-root-0230 MuiButton-text-0232 MuiButton-flat-0235"
            type="button"
          >
            <span
              class="MuiButton-label-0231"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0259"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0222 WithStyles-TableCell--root-0219 MuiTableCell-head-0223 WithStyles-TableCell--head-0220"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0256 MuiButton-root-0230 MuiButton-text-0232 MuiButton-flat-0235"
            type="button"
          >
            <span
              class="MuiButton-label-0231"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,13V11H18V13H10M10,19V17H14V19H10M10,7V5H22V7H10M6,17H8.5L5,20.5L1.5,17H4V4H6V17Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-0259"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0222 WithStyles-TableCell--root-0219 MuiTableCell-head-0223 WithStyles-TableCell--head-0220"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0256 MuiButton-root-0230 MuiButton-text-0232 MuiButton-flat-0235"
            type="button"
          >
            <span
              class="MuiButton-label-0231"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0259"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0222 WithStyles-TableCell--root-0219 MuiTableCell-head-0223 WithStyles-TableCell--head-0220"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-0266"
    />
  </table>
  <div
    class="Component-root-0267"
  >
    <div
      class="MuiCircularProgress-root-0268 MuiCircularProgress-colorPrimary-0271 MuiCircularProgress-indeterminate-0270"
      style="width: 64px; height: 64px;"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-0273"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-0274 MuiCircularProgress-circleIndeterminate-0276"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`UserTable should display message when there are no registered users 1`] = `
<div
  class="MuiPaper-root-098 MuiPaper-elevation2-0102 MuiPaper-rounded-099 UserTable-root-094"
>
  <table
    class="MuiTable-root-0125 UserTable-table-095"
  >
    <thead
      class="MuiTableHead-root-0126"
    >
      <tr
        class="MuiTableRow-root-0127 MuiTableRow-head-0130"
      >
        <th
          class="MuiTableCell-root-0135 WithStyles-TableCell--root-0132 MuiTableCell-head-0136 WithStyles-TableCell--head-0133"
          scope="col"
        />
        <th
          class="MuiTableCell-root-0135 WithStyles-TableCell--root-0132 MuiTableCell-head-0136 WithStyles-TableCell--head-0133"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0169 MuiButton-root-0143 MuiButton-text-0145 MuiButton-flat-0148"
            type="button"
          >
            <span
              class="MuiButton-label-0144"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0172"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0135 WithStyles-TableCell--root-0132 MuiTableCell-head-0136 WithStyles-TableCell--head-0133"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0169 MuiButton-root-0143 MuiButton-text-0145 MuiButton-flat-0148"
            type="button"
          >
            <span
              class="MuiButton-label-0144"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,13V11H18V13H10M10,19V17H14V19H10M10,7V5H22V7H10M6,17H8.5L5,20.5L1.5,17H4V4H6V17Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-0172"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0135 WithStyles-TableCell--root-0132 MuiTableCell-head-0136 WithStyles-TableCell--head-0133"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-0169 MuiButton-root-0143 MuiButton-text-0145 MuiButton-flat-0148"
            type="button"
          >
            <span
              class="MuiButton-label-0144"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-0172"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-0135 WithStyles-TableCell--root-0132 MuiTableCell-head-0136 WithStyles-TableCell--head-0133"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-0179"
    />
  </table>
  <div
    class="Component-root-0180"
  >
    <svg
      class="mdi-icon "
      width="64"
      height="64"
      fill="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5,12C18,12 20,14 20,16.5C20,17.38 19.75,18.21 19.31,18.9L22.39,22L21,23.39L17.88,20.32C17.19,20.75 16.37,21 15.5,21C13,21 11,19 11,16.5C11,14 13,12 15.5,12M15.5,14C14.12,14 13,15.12 13,16.5C13,17.88 14.12,19 15.5,19C16.88,19 18,17.88 18,16.5C18,15.12 16.88,14 15.5,14M10,4C12.21,4 14,5.79 14,8C14,8.91 13.69,9.75 13.18,10.43C12.32,10.75 11.55,11.26 10.91,11.9L10,12C7.79,12 6,10.21 6,8C6,5.79 7.79,4 10,4M2,20V18C2,15.88 5.31,14.14 9.5,14C9.18,14.78 9,15.62 9,16.5C9,17.79 9.38,19 10,20H2Z"
      />
    </svg>
    <p>
      There are currently no registered users.
    </p>
  </div>
</div>
`;

exports[`UserTable should render with required props 1`] = `
<div
  class="MuiPaper-root-05 MuiPaper-elevation2-09 MuiPaper-rounded-06 UserTable-root-01"
>
  <table
    class="MuiTable-root-032 UserTable-table-02"
  >
    <thead
      class="MuiTableHead-root-033"
    >
      <tr
        class="MuiTableRow-root-034 MuiTableRow-head-037"
      >
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-head-043 WithStyles-TableCell--head-040"
          scope="col"
        />
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-head-043 WithStyles-TableCell--head-040"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-076 MuiButton-root-050 MuiButton-text-052 MuiButton-flat-055"
            type="button"
          >
            <span
              class="MuiButton-label-051"
            >
              First
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-079"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-head-043 WithStyles-TableCell--head-040"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-076 MuiButton-root-050 MuiButton-text-052 MuiButton-flat-055"
            type="button"
          >
            <span
              class="MuiButton-label-051"
            >
              Last
              <svg
                class="mdi-icon sc-bdVaJa pPqKJ"
                width="24"
                height="24"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10,13V11H18V13H10M10,19V17H14V19H10M10,7V5H22V7H10M6,17H8.5L5,20.5L1.5,17H4V4H6V17Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-079"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-head-043 WithStyles-TableCell--head-040"
          scope="col"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-076 MuiButton-root-050 MuiButton-text-052 MuiButton-flat-055"
            type="button"
          >
            <span
              class="MuiButton-label-051"
            >
              Email
              <span
                class="sc-htpNat gGABWs"
              />
            </span>
            <span
              class="MuiTouchRipple-root-079"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-head-043 WithStyles-TableCell--head-040"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root-086"
    >
      <tr
        class="MuiTableRow-root-034 UserTable-row-03"
      >
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <div
              class=" sb-avatar__text"
              style="width: 34px; height: 34px; font-size: 11.3333px; line-height: 34px; text-align: center; text-transform: uppercase; color: rgb(255, 255, 255); border-radius: 100%;"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          Bob
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          Smith
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          bob.smith@gmail.com
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          style="font-size: 0.875rem;"
        >
          12-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          <div
            class="Component-root-087"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root-034 UserTable-row-03"
      >
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <div
              class=" sb-avatar__text"
              style="width: 34px; height: 34px; font-size: 11.3333px; line-height: 34px; text-align: center; text-transform: uppercase; color: rgb(255, 255, 255); border-radius: 100%;"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          Jane
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          Doe
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          jane.doe@gmail.com
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          style="font-size: 0.875rem;"
        >
          13-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          <div
            class="Component-root-087"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root-034 UserTable-row-03"
      >
        <th
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          scope="row"
        >
          <div
            class=" sb-avatar"
            style="display: inline-block; vertical-align: middle; width: 34px; height: 34px; border-radius: 100%; font-family: Helvetica, Arial, sans-serif;"
          >
            <div
              class=" sb-avatar__text"
              style="width: 34px; height: 34px; font-size: 11.3333px; line-height: 34px; text-align: center; text-transform: uppercase; color: rgb(255, 255, 255); border-radius: 100%;"
            />
          </div>
        </th>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          James
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          Bond
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          james.bond@gmail.com
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
          style="font-size: 0.875rem;"
        >
          14-Sep-2018
        </td>
        <td
          class="MuiTableCell-root-042 WithStyles-TableCell--root-039 MuiTableCell-body-044 WithStyles-TableCell--body-041"
        >
          <div
            class="Component-root-087"
          >
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="edit"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="delete"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19C6,20.1 6.9,21 8,21H16C17.1,21 18,20.1 18,19V7H6V19Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
            <button
              tabindex="0"
              class="MuiButtonBase-root-076 MuiIconButton-root-088 MuiIconButton-colorPrimary-090"
              type="button"
              data-testid="email"
            >
              <span
                class="MuiIconButton-label-093"
              >
                <svg
                  class="mdi-icon "
                  width="24"
                  height="24"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.89 21.1,4 20,4Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-079"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
